<resources>
    <string name="app_name">project1</string>
    <string name="team_18_battleship">Team 18 Battleship</string>
    <string name="player_1_name">Player 1 Name</string>
    <string name="player_2_name">Player 2 Name</string>
    <string name="enter_name">Enter name</string>
    <string name="help">Help</string>
    <string name="play">PLAY</string>
    <string name="welcome">Welcome to Battleship</string>
    <string name="start_game">Start Game</string>
    <string name="game_rules">Game Rules:\n\n</string>
    <string name="rules">Write name of the players on welcome screen\nClick on Start game to start the game.\nA random player is chosen to start the game</string>
    <string name="ruleFourToSix">Chosen player is rewarded 4 ships\nPlayer places ships in cells \nOnce all ships are placed, user clicks done and hands device to opposite player\nSecond player place the ships in grid and click done.</string>
    <string name="ruleFive">When player two click done,game begins\nCurrent player selects a cell to attack</string>
    <string name="rulesix">If the cell contains a ship, drop "hit" marker. If the cell does not contain a ship, drop "miss" marker. In either case the player\'s turn ends.</string>
    <string name="ruleSeven"> If a user\'s ships are all destroyed, that user loses\nIf surrender button is pressed, game ends</string>
    <string name="main_menu">Main Menu</string>
    <string name="surrender">Surrender</string>
    <string name="done_button">Done</string>
    <string name="game_result">Game Result</string>
    <string name="congratulations">Congratulations</string>
    <string name="won_the_game">Won the Game</string>
    <string name="player_name">Player Name</string>
    <string name="player2_name">Player Name</string>
    <string name="enter_player_2_name">Enter Player 2 Name</string>
    <string name="enter_player_1_name">Enter Player 1 Name</string>
    <string name="loser_string">Better luck next time</string>
    <string name="congratulation_image">Congratulation image</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_new">Create New</string>
    <string name="log_in">Log In</string>
    <string name="remember">Remember</string>
    <string name="battleship_board">Battleship Board</string>
    <string name="create_new_user">Create New User</string>
    <string name="verify_password">Verify Password</string>
    <string name="create">Create</string>
    <string name="mismatch">Passwords do not match</string>
    <string name="empty">Fill out all fields</string>
    <string name="exists">User exists</string>
    <string name="notexists">User Does not Exist</string>
    <string name="wait">Waiting for another player to join the game…</string>
    <string name="player_wait">Please wait for other players to join</string>
    <string name="about_name">Battleship Cloud</string>
    <string name="about_instructions">Open the saved game from the server</string>
    <string name="dummy">dummy</string>
    <string name="join">Join Active Games</string>

</resources>