<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="480dp"
                android:contentDescription="@string/congratulation_image"
                app:srcCompat="@drawable/congratulations"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="50dp" />

            <TextView
                android:id="@+id/won_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:text="@string/won_the_game"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/winner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:text="@string/player_name"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/lose_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="center"
                android:text="@string/loser_string"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/loser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:text="@string/player2_name"
                android:textSize="24sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


                <Button
                    android:id="@+id/main_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal|center_vertical"
                    android:onClick="onMainMenu"
                    android:text="@string/main_menu" />


            </FrameLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>